# Arbitrage-AI-Bot

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml
data/sample/: README.md  candles.parquet  orderbook.csv  trades.csv
docs/: ai_module.md  architecture.md  configuration.md  data_pipeline.md  evaluation.md  index.md  paper_trading.md  quickstart.md  risk_management.md  security_and_compliance.md  strategies.md  troubleshooting.md
examples/: run_backtest.py  run_paper.py
scripts/: generate_sample.ps1  generate_sample.sh  prometheus.yml
src/ai_arb_lab/: __init__.py  cli.py  config.py  logging_config.py
src/ai_arb_lab/ai/: __init__.py  explain.py  policy.py
src/ai_arb_lab/connectors/: __init__.py  base.py  mock.py
src/ai_arb_lab/core/: __init__.py  bus.py  clock.py  events.py
src/ai_arb_lab/data/: __init__.py  loader.py  synthetic.py
src/ai_arb_lab/execution/: __init__.py  fill_model.py  paper_broker.py
src/ai_arb_lab/reporting/: __init__.py  metrics.py  render.py
src/ai_arb_lab/risk/: __init__.py  kill_switch.py  limits.py
src/ai_arb_lab/strategies/: __init__.py  base.py  simple_spread.py
tests/: __init__.py  conftest.py  test_cli.py  test_risk.py  test_strategy.py  test_synthetic.py
