[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-arb-lab"
version = "0.1.0"
description = "AI-assisted arbitrage research lab (simulated execution, paper trading, reproducible experiments)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "AI Arb Lab Contributors" }
]
keywords = ["arbitrage", "backtesting", "paper-trading", "simulation", "research", "education"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "pydantic>=2.0",
    "typer>=0.9",
    "structlog>=24.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow>=14.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "mypy>=1.7",
    "ruff>=0.1",
    "black>=24.0",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
]
otel = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
]

[project.scripts]
ai-arb-lab = "ai_arb_lab.cli:app"

[project.urls]
Homepage = "https://github.com/your-org/ai-arb-lab"
Documentation = "https://your-org.github.io/ai-arb-lab"
Repository = "https://github.com/your-org/ai-arb-lab"

[project.urls]
Homepage = "https://github.com/your-org/ai-arb-lab"
Documentation = "https://your-org.github.io/ai-arb-lab"
Repository = "https://github.com/your-org/ai-arb-lab"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests", "examples"]
exclude = ["__pycache__", ".git", ".venv"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
target-version = ["py312"]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | __pycache__
)/
'''

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short -p no:anchorpy"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
]
